# faviconx

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  example.py  pyproject.toml  requirements.txt  setup.py  test_installation.py
.github/workflows/: publish.yml  test.yml
faviconx/: __main__.py
tests/: test_faviconx.py
